# FlightTicketMCP

./: PYPI_PUBLISH_SUCCESS.md  README.md  __init__.py  main.py  mcp-config.json  pyproject.toml  requirements.txt  setup.py
core/: flights.py
flight_ticket_mcp_server/: __init__.py
tools/: __init__.py  flight_search_tools.py  flight_transfer_tools.py  weather_tools.py
utils/: __init__.py
